<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.hooni.diettracker.ui.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_input_titleAddStat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout_input_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_input_title">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/textView_input_weight_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_input_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/textInputLayout_input_weight_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_input_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.weight}" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_input_waist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_input_weight">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/textView_input_waist_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_input_waist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/textInputLayout_input_waist_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_input_waist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.waist}" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_input_kcal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_input_waist">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/textView_input_kcal_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_input_kcal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/textInputLayout_input_kcal_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_input_kcal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.kCal}" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_input_kcal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/textView_input_date_title" />

            <TextView
                android:id="@+id/textView_input_date"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:text="@{viewModel.date}" />

            <TextView
                android:id="@+id/textView_input_time"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:text="@{viewModel.time}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_input_date">
            <Button
                android:id="@+id/button_input_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_input_cancel"
                android:background="@android:color/holo_red_light"
                android:textColor="@android:color/white"
                />
            <Button
                android:id="@+id/button_input_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@color/white"
                android:text="@string/button_input_confirm" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>