<resources>
    <string name="app_name">Diet Tracker</string>
    <string name="textView_input_titleAddStat">Enter Infos</string>
    <string name="textView_input_titleEditStat">Edit Infos</string>
    <string name="textInputLayout_input_weight_hint">Enter Weight</string>
    <string name="textInputLayout_input_waist_hint">Enter Waist</string>
    <string name="textView_input_weight_title">Weight</string>
    <string name="textView_input_waist_title">Waist</string>
    <string name="textView_input_kcal_title">KCal</string>
    <string name="textView_input_date_title">Date &amp; Time</string>
    <string name="button_input_confirm">Confirm</string>
    <string name="textInputLayout_input_kcal_hint">Enter Consumed KCal</string>
    <string name="contentDescription_fab_stats_addStat">Add stat</string>

    <string name="errorMessage_viewModel_emptyField">Field is empty. Please fill out all fields.</string>
    <string name="errorMessage_viewModel_invalidInput">Invalid input. Please enter numbers only.</string>

    <string name="textView_listItem_weight">Weight: %1s</string>
    <string name="textView_listItem_waist">Waist: %1s</string>
    <string name="textView_listItem_kCal">kCal: %1s</string>

    <string name="formatted_time">%1d:%2d</string>
    <string name="formatted_date">%1d.%2d.%3d</string>
    <string name="textInputLayoutError_input_emptyField">Please fill out field.</string>

    <string name="errorMessage_stats_invalidDate">Invalid Date Selection</string>
    <string name="noDataGraphDescription_stats_emptyGraph">No data. Add some entries!</string>
    <string name="button_input_cancel">Cancel</string>
    <string name="actionModeMenu_delete">Delete</string>
</resources>